...
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="vzN-BX-udA"/>
                                        </constraints>
                                        <state key="normal" title="Login"/>
                                        <connections>
                                            <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LHI-rB-JXx"/>
                                        </connections>
                                    </button>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pj9-f1-bgG" customClass="MDCFilledTextField">
                                        <rect key="frame" x="0.0" y="16" width="374" height="48"/>
                                        <constraints>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VnH-zb-PmW" customClass="MDCFilledTextField">
                                        <rect key="frame" x="0.0" y="80" width="374" height="48"/>
                                        <constraints>
...
                                    <constraint firstAttribute="height" constant="48" id="2w8-MM-5e8"/>
                                </constraints>
                                <state key="normal" title="Report incident">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                    <constraint firstAttribute="height" constant="48" id="VSL-3O-CqW"/>
                                </constraints>
                                <state key="normal" title="View reports">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name of faulty machine." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zjc-Yz-lmG" customClass="MDCFilledTextField">
                                        <rect key="frame" x="20" y="60" width="374" height="48"/>
                                        <constraints>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name of impacted location." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="svE-F3-nWu" customClass="MDCFilledTextField">
                                        <rect key="frame" x="20" y="124" width="374" height="48"/>
                                        <constraints>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Short description." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4SJ-c8-Jaa" customClass="MDCFilledTextField">
                                        <rect key="frame" x="20" y="188" width="374" height="48"/>
                                        <constraints>
...
