//
//  Constant.swift
//  Incident Reporting
//
//  Created by Hrishikesh Pol on 19/6/20.
//  Copyright © 2020 Hrishikesh Pol. All rights reserved.
//

import Foundation

enum Constant: String {
    case kUsernameLenghtError = "Username should be at least 8 charcters in lenght."
    case kUsernameAlphabeticError = "Username should be alphabetic only."
    case kPasswordLenghtError = "Password should be at least 8 charcters in lenght."
    case kHomeViewController = "HomeViewController"
    case kHomeTitle = "Incident Reporting"
    case kErrorTitle = "Error"
    case kMainStoryBoard = "Main"
    case kCommonError = "Something went wrong."
    case kAlertButtonTitle = "OK"
    case kReportIncidentTitle = "Report Incident"
    case kSubmitButtonTitle = "Submit"
    case kTimeStamp = "yyyy-MM-dd hh:mm:ss"
    case kListTitle = "Incident Reports"
    case kListCellIdentifier = "ReportListTableViewCell"
    case kSearchPlaceHolder = "Search by machine name."
}
